; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/mm/extr_pgtable_32.c___set_fixmap.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/mm/extr_pgtable_32.c___set_fixmap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@__end_of_fixed_addresses = common dso_local global i32 0, align 4
@fixmaps = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @__set_fixmap(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load i32, i32* %4, align 4
  %9 = call i64 @__fix_to_virt(i32 %8)
  store i64 %9, i64* %7, align 8
  %10 = load i32, i32* %4, align 4
  %11 = load i32, i32* @__end_of_fixed_addresses, align 4
  %12 = icmp uge i32 %10, %11
  br i1 %12, label %13, label %15

13:                                               ; preds = %3
  %14 = call i32 (...) @BUG()
  br label %23

15:                                               ; preds = %3
  %16 = load i64, i64* %7, align 8
  %17 = load i32, i32* %5, align 4
  %18 = load i32, i32* %6, align 4
  %19 = call i32 @pgprot_val(i32 %18)
  %20 = call i32 @map_page(i64 %16, i32 %17, i32 %19)
  %21 = load i32, i32* @fixmaps, align 4
  %22 = add nsw i32 %21, 1
  store i32 %22, i32* @fixmaps, align 4
  br label %23

23:                                               ; preds = %15, %13
  ret void
}

declare dso_local i64 @__fix_to_virt(i32) #1

declare dso_local i32 @BUG(...) #1

declare dso_local i32 @map_page(i64, i32, i32) #1

declare dso_local i32 @pgprot_val(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
